[package]
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"
name = "proto_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
prost = "0.6"
tokio = {version = "0.2", features = ["macros"]}
tonic = "0.3"

[build-dependencies]
tonic-build = "0.3"
